# crawlifyrs

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: cli.rs  commands.rs  config.rs  crawler.rs  deduplication.rs  error.rs  exporter.rs  frontier.rs  http.rs  lib.rs  main.rs  monitoring.rs  nlp.rs  parser.rs  pdf_exporter.rs  sitemap.rs  telemetry.rs
src/storage/: connection.rs  mod.rs  models.rs  schema.sql
