[package]
name = "crawlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json", "brotli", "gzip", "deflate"] }
tokio = { version = "1.38.0", features = ["full"] }
rusqlite = { version = "0.24.2", features = ["chrono", "bundled"] }
html5ever = "0.26.0"
url = { version = "2.5.2", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
aho-corasick = "1.1.3"
simhash = "0.2.0"
readability = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = { version = "0.14.0", features = ["yaml"] }
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
comfy-table = "7.1.1"
rand = "0.8.5"
dashmap = { version = "5.5.3", features = ["serde"] }
tokio-retry = "0.3"
csv = "1.3"
priority-queue = { version = "1.3.1", features = ["serde"] }
csv-async = "1.3.1"
bincode = "1.3.3"
quick-xml = { version = "0.35.0", features = ["serialize"] }
serde_yaml = "0.9.34"
humantime-serde = "1.1.1"
humantime = "2.1.0"
tracing-log = "0.2.0"
bb8 = "0.7.1"
bb8-rusqlite = "0.1.0"
async-trait = "0.1.80"
hex = "0.4.3"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
headless_chrome = "1.0"